spacing and image fixes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -130,7 +130,7 @@ body {
         max-width: 116px;
     }
     .-floyd {
-        max-width: 90px;
+        max-width: 80px;
     }
     .more-soon {
         max-width: 189px;
@@ -150,6 +150,7 @@ body {
     .-brands-text {
         text-align: center;
         font-size: 14px;
+        margin-bottom: 10px;
     }
 
     .socials {
