--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -59,7 +59,6 @@
         @include media-breakpoint-down(md) {
             position: relative;
             top: 0px;
-            background: #fffff9;
             // margin-top: 10px;
         }
 
@@ -91,8 +90,13 @@
             }
             .carousel-inner {
                 .carousel-item {
+                    a,
+                    a:hover,
+                    a:visited {
+                        text-decoration: none;
+                    }
                     img {
-                        margin: 10px;
+                        margin: 0 10px;
                         padding: 2px;
                     }
                     .top-trending-text {
@@ -207,7 +211,6 @@
                     text-align: left;
                     padding: 0;
                     text-align: center;
-                    margin-top: 15px;
                     font-size: 18px;
                     img {
                         width: 90%;
